# euro-converter

./: .gitignore  LICENSE  Procfile  logging.conf  pyproject.toml
euro_converter/: config.py  main.py
euro_converter/cache/: __init__.py  base.py  data.py  filecache.py  redis.py
euro_converter/calculator/: __init__.py  calc.py  utils.py
euro_converter/ecb/: __init__.py  download.py  parser.py  types.py  update.py
tests/calculator/: fixtures.py  test_calc.py
tests/ecb/: fixtures.py  test_update.py
tests/ecb/data/: test-data.xml
